@@ -315,6 +315,10 @@
 
       <dd>for German message translation</dd>
 
+      <dt><a href="mailto:kevinfinn@mediaone.net">Kevin Finn</a></dt>
+
+      <dd>auto-decimal point patch</dd>
+
       <dt><a href="mailto:rjf@aracnet.com">Ron Forrester</a></dt>
 
       <dd>for gnome patches</dd>
