@@ -3,4 +3,11 @@
   "You can access the manual under the Help menu.")
  ("GnuCash does not use categories like Quicken."
   "Instead, you should use Income and Expense accounts.")
+ ("In the reconcile window, you can press the spacebar"
+  "to mark transactions as reconciled."
+  "You can also press Tab and Shift-Tab to move between"
+  "deposits and withdrawals.")
+ ("When entering check numbers in the register, you can"
+  "press '+' to enter the next number. You can use '+'"
+  "and '-' to increment and decrement the number, respectively.")
 )
